# galgoz

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: GBP_JPY_D.pkl  GBP_JPY_H4.pkl  US30_USD_D.pkl  file_for_testing.pkl
galgoz/: __init__.py  backtesting.py  galgoz.py  indicators.py  utils.py
galgoz/backtesting/: __initi__.py  backtesting.py
galgoz/indicators/: __init__.py  base.py  helpers.py  oscillators.py  trend.py  volume.py
galgoz/plotting/: candles.py
notebooks/: Connect and fetch data.ipynb  candle_plot.ipynb  connect_and_fetch_data.ipynb  download_candle_data.ipynb  example_supertrend.ipynb  generate_signals.ipynb  open_and_close_order.ipynb  open_and_close_trade.ipynb  plot_indicators.ipynb  qqe_indicator.ipynb  sg_trend.ipynb  strategy_galgoz_standard.ipynb
notebooks/backtesting/: ST_indicator_with_vbt.ipynb  vbt_testing.ipynb
tests/: test_backtesting.py  test_galgoz.py  test_indicators.py
