[tool.poetry]
name = "galgoz"
version = "0.1.0"
description = ""
authors = ["Gustavo <gzarruk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "^2.2.3"
numpy = ">=1.21,<2.2"
flask = "^3.1.0"
oandapyv20 = "^0.7.2"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pytest = "^8.3.4"
plotly = "^5.24.1"
ipython = "^8.30.0"
nbformat = "^5.10.4"
types-python-dateutil = "^2.9.0.20241206"
pydantic = "^2.10.3"
pandas-stubs = "^2.2.3.241126"
scipy = "^1.14.1"
whittaker-eilers = "^0.2.0"
bash-kernel = "^0.9.3"
ta = "^0.11.0"
ta-lib = "^0.6.0"
pandas-ta = "^0.3.14b0"
vectorbt = "^0.27.1"
python-binance = "^1.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
